# deerfllow-BY

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.example.yaml
backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/app/channels/: dingtalk.py  service.py  store.py
backend/app/gateway/: __init__.py  app.py  auth.py  auth_context.py  deps.py  document_processor.py  embedding_service.py  ownership.py  rate_limit.py  scheduler.py  services.py
backend/app/gateway/abac/: __init__.py  evaluator.py  policies.py
backend/app/gateway/canvas/: __init__.py  executor.py  models.py  store.py  store_service.py  versions.py
backend/app/gateway/collaboration/: __init__.py  publish.py
backend/app/gateway/comments/: __init__.py  models.py  service.py  sqlite_store.py
backend/app/gateway/connectors/: __init__.py  base.py  config_schema.py  dlq.py  registry.py  runtime.py  token_refresh.py  webhook.py
backend/app/gateway/data/: knowledge.db  tasks.db  voice_config.py
backend/app/gateway/identity/: __init__.py  config.py  crypto.py
backend/app/gateway/multitenancy/: __init__.py  cost_calculator.py  cost_dashboard.py  models.py  quota.py  router_service.py  usage_tracker.py
backend/app/gateway/observability/: __init__.py  langfuse_exporter.py  metrics.py  tracing.py
backend/app/gateway/routers/: __init__.py  admin_config.py  admin_knowledge.py  admin_memory.py  admin_monitoring.py  admin_secrets.py  admin_token_usage.py  agents.py  artifacts.py  channels.py  custom_skills.py  knowledge.py  mcp.py  memory.py  models.py  ppt.py  runs.py  skills.py  tasks.py  thread_runs.py  threads.py  uploads.py  user_skills.py  users.py  voice.py
backend/app/gateway/services/: document_processor.py  embedding_service.py  scheduler_service.py
backend/app/services/: ppt_master_service.py  ppt_service.py
backend/scripts/: repro_mnt_user_data_permission.py
backend/tests/: conftest.py  test_abac.py  test_abac_canvas_route.py  test_admin_audit_endpoint.py  test_admin_branding_xss_rejection.py  test_admin_router_security.py  test_admin_routers_require_owner.py  test_admin_secret_store.py  test_admin_secrets_allowlist.py  test_admin_secrets_api.py  test_admin_secrets_atomic.py  test_admin_secrets_fail_fast.py  test_admin_secrets_helpers.py  test_admin_secrets_xproc_lock.py  test_admin_tracing_config.py  test_aio_sandbox.py  test_app_lifespan.py  test_audit_middleware.py  test_audit_models.py  test_audit_query.py  test_audit_siem.py  test_audit_smoke.py  test_audit_writer.py  test_auth_authing.py  test_auth_azure_ad.py  test_auth_keycloak.py  test_auth_oidc.py  test_auth_okta.py  test_auth_provider.py  test_auth_secret_fail_fast.py  test_auth_session.py  test_auth_token.py  test_canvas_executions_sqlite.py  test_canvas_executor.py  test_canvas_lifespan_sqlite.py  test_canvas_models.py  test_canvas_nodes_agent.py  test_canvas_nodes_branch.py  test_canvas_nodes_loop.py  test_canvas_nodes_prompt.py  (+85 more)
backend/tests/manual/: sqlite_restart_proof.py
(+415 files in other folders)
