[project]
name = "deer-flow"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "Pillow>=11.2.0",
    "python-pptx>=1.0.2",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
    "lark-oapi>=1.4.0",
    "slack-sdk>=3.33.0",
    "python-telegram-bot>=21.0",
    "langgraph-sdk>=0.1.51",
    "markdown-to-mrkdwn>=0.3.1",
    "wecom-aibot-python-sdk>=0.1.6",
    "apscheduler>=3.10.0",
    "edge-tts>=7.2.8",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "markdownify>=0.11.6",
    "ebooklib>=0.18",
    "nbconvert>=7.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "curl_cffi>=0.7.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "flask>=3.0.0",
    "matplotlib>=3.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.11"]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
deerflow-harness = { workspace = true }
